--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,22 @@
-asgiref
-Django
-django-cors-headers
-djangorestframework
-djangorestframework-simplejwt
-PyJWT
-pytz
-sqlparse
-psycopg2-binary
-python-dotenv
+asgiref==3.9.1
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+cryptography==45.0.7
+dj-database-url==3.0.1
+Django==5.2.6
+django-allauth==65.11.2
+git-filter-repo==2.47.0
+gunicorn==23.0.0
+idna==3.10
+packaging==25.0
+psycopg2-binary==2.9.10
+pycparser==2.23
+PyJWT==2.10.1
+python-decouple==3.8
+python-dotenv==1.1.1
+requests==2.32.5
+sqlparse==0.5.3
+tzdata==2025.2
+urllib3==2.5.0
+whitenoise==6.10.0
